# Automata_App

./: README.md  build_lib.sh  ffigen.yaml  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  automata_lib.h
android/app/src/main/cpp/automata_lib/: automata_lib.h  automata_lib_interface.cpp
android/app/src/main/cpp/automata_lib/lib/: AutomataUtil.hpp  main.cpp
android/app/src/main/kotlin/com/example/automata_app/: MainActivity.kt
assets/: graphviz.umd.js  viz.html
assets/automata_lib/: automata_lib.h  automata_lib_interface.cpp
assets/automata_lib/lib/: DFA.hpp  NFA.hpp  ParseTree.hpp  main.cpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/CppLibrary/: automata_lib.cpp
lib/native_libs/: CMakeLists.txt
lib/native_libs/graphviz_lib/: graphviz_lib.c  graphviz_lib.h  test_2.txt
lib/plugin/ffi_plugin/: automata_lib.dart  automata_lib_cpp_bindings.dart
lib/provider/automata_provider/: automata_metadata.dart  automata_provider.dart  automata_provider_item.dart
lib/services/automata/: automata.dart  automata_exceptions.dart  automata_service.dart  constants.dart
lib/services/graph_svg/: exceptions.dart  graph_svg_provider.dart
lib/views/: automata_operations.dart  automata_view.dart
lib/views/automata_operations/: automata_operations.dart  evaluation.dart  evaluation_exceptions.dart  operations_constants.dart
lib/views/create_automata/: create_automata_view.dart  create_from_regex.dart  create_from_table.dart
lib/views/view_automata/: automata_view.dart
lib/widgets/: editable_datatable.dart  graphviz_webview_widget.dart  interactive_widget.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native_libs/automata_lib/: automata_lib_interface.cpp
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
